<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_30sdp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/logo"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_centerInParent="true"
                android:src="@mipmap/logo_1"/>
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_15sdp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/logo_text"
            android:text="@string/name"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:padding="@dimen/_10sdp"
        android:background="@drawable/login_bg_shape"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textStyle="bold"
            android:textSize="@dimen/_20sdp"
            android:textColor="@color/logo_text"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:id="@+id/ll_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_text"
            android:orientation="vertical">
        
            <LinearLayout
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:text="@string/s_lang"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/expandableTextView"
                        android:layout_width="0dp"
                        android:textColor="@color/grey"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                    <ImageView
                        android:id="@+id/expandBtn"
                        android:src="@mipmap/down_arrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tint="@color/grey"/>


                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:text="@string/p_no"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <EditText

                        android:layout_width="0dp"
                        android:textColor="@color/grey"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textSize="@dimen/_10sdp"
                        android:backgroundTint="@android:color/transparent"
                        android:layout_weight="1"/>


                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey"/>


            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textColor="@color/grey"
                    android:text="@string/password"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <EditText

                        android:layout_width="0dp"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/_10sdp"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:backgroundTint="@android:color/transparent"
                        android:layout_weight="1"/>


                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey"/>


            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_details"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_centerHorizontal="true"
            android:text="@string/login"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/_14sdp"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/white"
            android:background="@drawable/ic_rectangle_12"/>

    </RelativeLayout>



</LinearLayout>